--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@types/js-yaml": "^4.0.9",
+    "compodoc": "^0.0.41",
     "js-yaml": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
