--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@angular/compiler-cli": "^20.3.0",
     "@rollup/rollup-win32-x64-msvc": "^4.53.2",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^30.0.0",
+    "jasmine": "^5.12.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
